--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100vw;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  margin: 1em;
 }
 
 hr {
